# inspect-hendrycks-math-repro

./: pyproject.toml  repro.sh
logs/: 2024-10-08T15-15-33+01-00_inspect-evals-math_QUPfMHGUpFw4yZsz97GKGP.json
